[gd_scene load_steps=31 format=3 uid="uid://u67og76dn3c6"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_5827q"]
[ext_resource type="Texture2D" uid="uid://3snkh5rvuft7" path="res://Resources/Images/SpriteSheets/knight.png" id="1_mj5pb"]
[ext_resource type="AudioStream" uid="uid://qenydoywjm1g" path="res://Resources/Audio/SFX/Jump.ogg" id="3_o6878"]
[ext_resource type="Texture2D" uid="uid://doillnsriys8c" path="res://Resources/Images/SpriteSheets/Text (White) (8x10).png" id="4_gmwo1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jb3uf"]
atlas = ExtResource("1_mj5pb")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djg2x"]
atlas = ExtResource("1_mj5pb")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt4oe"]
atlas = ExtResource("1_mj5pb")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phabc"]
atlas = ExtResource("1_mj5pb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4g6b"]
atlas = ExtResource("1_mj5pb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoq2l"]
atlas = ExtResource("1_mj5pb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs3ee"]
atlas = ExtResource("1_mj5pb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0qh1"]
atlas = ExtResource("1_mj5pb")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6sqc"]
atlas = ExtResource("1_mj5pb")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bge7v"]
atlas = ExtResource("1_mj5pb")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf7hv"]
atlas = ExtResource("1_mj5pb")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ensbg"]
atlas = ExtResource("1_mj5pb")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iunt5"]
atlas = ExtResource("1_mj5pb")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exxpq"]
atlas = ExtResource("1_mj5pb")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a52ov"]
atlas = ExtResource("1_mj5pb")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agitj"]
atlas = ExtResource("1_mj5pb")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3op2"]
atlas = ExtResource("1_mj5pb")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rexjl"]
atlas = ExtResource("1_mj5pb")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6jbw"]
atlas = ExtResource("1_mj5pb")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1r6f"]
atlas = ExtResource("1_mj5pb")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3imkn"]
atlas = ExtResource("1_mj5pb")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3emj"]
atlas = ExtResource("1_mj5pb")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5g7h"]
atlas = ExtResource("1_mj5pb")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uxts"]
atlas = ExtResource("1_mj5pb")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_caobm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb3uf")
}],
"loop": true,
"name": &"dead1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djg2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt4oe")
}],
"loop": true,
"name": &"dead2",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_phabc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4g6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoq2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs3ee")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0qh1")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6sqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bge7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf7hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ensbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iunt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exxpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a52ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agitj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3op2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rexjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6jbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1r6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3imkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3emj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5g7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uxts")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1ou8"]
size = Vector2(7, 15)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_5827q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_caobm")
animation = &"jump"
autoplay = "idle"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o6878")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_w1ou8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(11, -22)
texture = ExtResource("4_gmwo1")
hframes = 10
vframes = 5
frame = 44

[node name="CoyoteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.12
one_shot = true

[node name="BufferedJumpTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="BufferedJumpTimer" to="." method="_on_buffered_jump_timer_timeout"]
